# BranchyLLM

./: .gitignore  README.md  pyproject.toml  test.ipynb  train_heads.py
configs/: fsdp_config.yaml
scripts/: calibrate.py  evaluate.py  inference.py  train.py
src/: BranchyConfig.py  BranchyModel.py  __init__.py  utils.py
src/early_exit/: __init__.py  debug_logger.py  hidden_state_cache.py  model_config.py  model_loader.py
test/: BranchyConfig_test.py
